# tago

./: .gitignore  README.en.md  README.md  pyproject.toml  pytest.ini
src/cli/: main.py  params.py  version.py
src/cli/commands/: __init__.py  adapters.py  console.py  scan.py  tag.py  whoami.py
src/core/: arn.py  aws_identity.py  merge.py  scan_engine.py  tag_engine.py  template_engine.py
src/core/adapters/: __init__.py  base.py  cloudwatch_loggroup.py  dynamodb_table.py  ec2_instance.py  ecr_repository.py  ecs_taskdefinitions.py  iam_role.py  lambda_function.py  s3_bucket.py  secretsmanager_secret.py  stepfunctions_stateMachine.py
src/core/engine/: identity_engine.py  scan_engine.py  tag_engine.py
src/core/models/: AwsIdentity.py  ScanReport.py  Tag.py  TagRunResult.py  TagSet.py  __init__.py
tests/: conftest.py
tests/aws_stubs/: test_cloudwatch_loggroup_adapter.py  test_dynamodb_adapter.py  test_ec2_adapter.py  test_ecr_adapter.py  test_ecs_taskdef_adapter.py  test_iam_role_adapter.py  test_identity_engine.py  test_lambda_adapter.py  test_s3_bucket_adapter.py  test_secretsmanager_adapter.py  test_stepfunctions_adapter.py
tests/cli/: test_cli_tag_command.py
tests/unit/: test_base_adapter_merge.py  test_scan_engine.py  test_tag_engine.py  test_template_engine.py
